--- a/2. Staging Your Project/2.3. Buiding blocks overwiew.md
+++ b/2. Staging Your Project/2.3. Buiding blocks overwiew.md
@@ -2,3 +2,4 @@
 ## Go back to your canvas, review what you wrote, see if you can put more detail into any of the boxes.
 ## Do you already have ideas for prototypes? Document your drafts! Taking pictures of drawings is a great way to do it.  
 
+![Prototype](https://github.com/jafsia/Local-manufacturing-of-open-source-devices-/blob/main/2.%20Staging%20Your%20Project/Drawing_OHM.jpg)
